# testTask

./: .gitignore  CMakeLists.txt  README.md
control_system/: CMakeLists.txt
control_system/src/: main.cpp
control_system/src/control_system/: control_system.cpp  control_system.hpp
logger/: CMakeLists.txt
logger/src/: main.cpp
logger/src/logger_server/: logger_server.cpp  logger_server.hpp
math_model/: CMakeLists.txt
math_model/src/: main.cpp
math_model/src/math_model/: math_model.cpp  math_model.hpp
net/: CMakeLists.txt
net/src/: main_client.cpp  main_server.cpp
net/src/client/: client.cpp  client.hpp
net/src/server/: server.cpp  server.hpp
net/src/signal/: signal.cpp  signal.hpp
src/: control_system.cpp  logger.cpp  math_model.cpp
src/net/: net.cpp  net.hpp  serversocket.hpp  socket.hpp  socketaddress.hpp
src/net/client/: client.cpp  client.hpp
src/net/server/: server.cpp  server.hpp
src/socket/: socket.cpp  socket.hpp
